feat: add temp subscription activation endpoint
